2008-06-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-svn.el (vc-annotate-parent-rev): Pacify byte compiler.

2008-06-25  Andreas Schwab  <schwab@suse.de>

	* faces.el (face-font-family-alternatives, variable-pitch): Use
	"Sans Serif", not "Sans-Serif".

2008-06-24  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (face-font-family-alternatives, variable-pitch): Change
	"Sans" to the canonical name "Sans-Serif".

2008-06-24  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-mode-map): Add extra keybindings to
	`calc-missing-key'.
	* calc/calc-ext.el (calc-init-extensions): Add keybinding for
	`kill-ring-save'.

2008-06-24  Miles Bader  <miles@gnu.org>

	* mouse.el (mouse-appearance-menu): Don't do anything if the user
	pops up the menu but doesn't select anything.

2008-06-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* add-log.el (add-change-log-entry): Add new arg to force each new
	entry to be on a new line.
	* diff-mode.el (diff-add-change-log-entries-other-window): Use it.

	* vc-dir.el (vc-client-object): Remove.
	(vc-dir-prepare-status-buffer): Take a backend as an argument and
	use it when looking for a buffer.
	(vc-dir): Add a backend argument.  Set revert-buffer-function.
	Don't create a client object.  Move bindings ...
	(vc-dir-menu-map, vc-dir-mode-map): ... here.
	(vc-dir-revert-buffer-function): New function.
	(vc-generic-status-printer): Rename to ...
	(vc-dir-status-printer): ... this.
	(vc-generic-state, vc-generic-status-fileinfo-extra)
	(vc-dir-extra-menu, vc-make-backend-object): Remove.
	(vc-default-status-printer): Use a different face for
	directories.  Don't display any text for directories in the state
	column.  Add tooltips.

	* vc.el (Todo): Update.

	* vc-hg.el (vc-annotate-convert-time, vc-default-status-printer):
	* vc-rcs.el (vc-annotate-convert-time):
	* vc-mtn.el (vc-annotate-convert-time):
	* vc-git.el (vc-annotate-convert-time):
	* vc-cvs.el (vc-annotate-convert-time):